# wasm-rquickjs

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  capability-detection.md  cleanup-skeleton.sh  compile-all-examples.sh
.agents/skills/adding-builtin-module/: SKILL.md
.agents/skills/cleaning-up-builtin-module/: SKILL.md
.agents/skills/finalizing-pr/: SKILL.md
.agents/skills/fixing-node-compat-test/: SKILL.md
.agents/skills/regenerating-goldenfiles/: SKILL.md
.agents/skills/skeleton-development/: SKILL.md
.github/scripts/: enable-wasmtime-fork.sh  run-runtime-group-under-gdb.sh
.github/workflows/: ci.yaml
crates/golem-context/: Cargo.toml
crates/golem-context/src/: lib.rs
crates/golem-context/wit/: golem-context.wit
crates/golem-websocket/: Cargo.toml
crates/golem-websocket/src/: bindings.rs  lib.rs
crates/golem-websocket/wit/: golem-websocket.wit
crates/wasi-logging/: Cargo.toml
crates/wasi-logging/src/: bindings.rs  lib.rs
crates/wasi-logging/wit/: wasi-logging.wit
crates/wasm-rquickjs/: Cargo.toml
crates/wasm-rquickjs/skeleton/: Cargo.toml  Cargo.toml_  golem.yaml
crates/wasm-rquickjs/skeleton/src/: capabilities.rs  internal.rs  lib.rs  native.rs  wrappers.rs
crates/wasm-rquickjs/skeleton/src/builtin/: abort_controller.js  assert.js  assert.rs  async_hooks.js  async_hooks.rs  base64.rs  buffer.js  buffer.rs  child_process.js  child_process.rs  cluster.rs  console.js  console.rs  constants.js  dgram.js  dgram.rs  diagnostics_channel.js  diagnostics_channel.rs  diagnostics_channel_golem.js  dns.js  dns.rs  dns_promises.js  domain.js  domain.rs  encoding.js  encoding.rs  event_target.js  event_target.rs  eventemitter.js  eventemitter.rs  events.js  formdata_node.js  fs.js  fs.rs  fs_promises.js  gc.rs  http.js  http.rs  http2.js  http2.rs  (+73 more)
crates/wasm-rquickjs/skeleton/src/builtin/internal/: errors.js  mod.rs  util.js
crates/wasm-rquickjs/skeleton/src/builtin/internal/binding/: util.js
crates/wasm-rquickjs/skeleton/src/builtin/internal/fs/: utils.js
crates/wasm-rquickjs/skeleton/src/builtin/internal/streams/: add-abort-signal.js  compose.js  destroy.js  duplex.js  end-of-stream.js  lazy_transform.js  legacy.js  pipeline.js  readable.js  state.js  utils.js  writable.js
crates/wasm-rquickjs/skeleton/src/builtin/internal/test/: binding.js
crates/wasm-rquickjs/skeleton/src/builtin/internal/util/: debuglog.js  inspect.js  types.js
crates/wasm-rquickjs/skeleton/src/modules/: mod.rs
crates/wasm-rquickjs/src/: capability_scan.rs  conversions.rs  exports.rs  imports.rs  inject.rs  javascript.rs  lib.rs  optimize.rs  rust_bindgen.rs  skeleton.rs  types.rs  typescript.rs  wit.rs
src/: cli.rs  main.rs
tests/: binary_inject.rs  compilation.rs  dts.rs  errors.rs  glue_benchmark.rs  installed_apps_report.rs  js_subtest_parser.rs  migrate_config_split.rs  node_compat.rs  node_compat_config_report.rs  node_compat_report.rs  node_compat_validate.rs  runtime.rs  wizer_benchmark.rs
tests/common/: js_subtest_parser.rs  mod.rs  test_server.rs
tests/goldenfiles/: .editorconfig  generated_types_abort-controller_exports.d.ts  generated_types_all-golem-imports_exports.d.ts  generated_types_all-golem-imports_golem_api_1_1_7_host.d.ts  generated_types_all-golem-imports_golem_api_1_1_7_oplog.d.ts  generated_types_all-golem-imports_golem_durability_1_2_1_durability.d.ts  generated_types_all-golem-imports_golem_exec_1_0_0_types.d.ts  generated_types_all-golem-imports_golem_graph_1_0_0_connection.d.ts  generated_types_all-golem-imports_golem_graph_1_0_0_query.d.ts  generated_types_all-golem-imports_golem_graph_1_0_0_types.d.ts  generated_types_all-golem-imports_golem_rpc_0_2_1_types.d.ts  generated_types_all-golem-imports_golem_search_1_0_0_types.d.ts  generated_types_all-golem-imports_wasi_filesystem_0_2_3_preopens.d.ts  generated_types_all-golem-imports_wasi_filesystem_0_2_3_types.d.ts  generated_types_all-golem-imports_wasi_http_0_2_3_outgoing_handler.d.ts  generated_types_all-golem-imports_wasi_http_0_2_3_types.d.ts  generated_types_all-golem-imports_wasi_io_0_2_3_poll.d.ts  generated_types_all-golem-imports_wasi_random_0_2_3_insecure.d.ts  generated_types_all-golem-imports_wasi_random_0_2_3_insecure_seed.d.ts  generated_types_all-golem-imports_wasi_sockets_0_2_3_instance_network.d.ts  generated_types_all-golem-imports_wasi_sockets_0_2_3_ip_name_lookup.d.ts  generated_types_all-golem-imports_wasi_sockets_0_2_3_network.d.ts  generated_types_assert_exports.d.ts  generated_types_bigint-roundtrip.d.ts  generated_types_buffer-utils_exports.d.ts  generated_types_cjs-require_exports.d.ts  generated_types_console_exports.d.ts  generated_types_crypto_exports.d.ts  generated_types_diagnostics-channel-golem_exports.d.ts  generated_types_diagnostics-channel_exports.d.ts  generated_types_dns_exports.d.ts  generated_types_domain_exports.d.ts  generated_types_encoding.d.ts  generated_types_encoding_exports.d.ts  generated_types_errors.d.ts  generated_types_example1_exports.d.ts  generated_types_example2.d.ts  generated_types_example2_exports.d.ts  generated_types_example3.d.ts  generated_types_example3_exports.d.ts  (+37 more)
tests/installed_apps/: README.md  config.jsonc  report.md
tests/libraries/: libraries.md
tests/node_compat/: README.md  config.jsonc  generate-report.sh  report.md  vendor.sh
tests/node_modules_apps/: README.md  config.jsonc
tests/runtime/: abort_controller.rs  assert.rs  bigint_roundtrip.rs  buffer.rs  cjs_require.rs  console.rs  crypto.rs  diagnostics_channel.rs  diagnostics_channel_golem.rs  dns.rs  domain.rs  encoding.rs  example1.rs  example2.rs  example3.rs  export_from_inner_package.rs  export_interface_name_collision.rs  fetch.rs  fs.rs  imports.rs  installed_apps.rs  intl.rs  main.rs  module_resolution.rs  node_http.rs  node_modules_apps.rs  os.rs  path.rs  pollable.rs  response_constructor.rs  response_static.rs  sqlite.rs  stateful1.rs  streams.rs  structured_clone.rs  timeout.rs  toplevel_timer.rs  url.rs  v8_stack_trace.rs  variant_list_roundtrip.rs  (+1 more)
tools/ai-dev-tools/: package-lock.json  package.json
(+2370 files in other folders)
