[package]
name = "wasm-rquickjs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "wasm-rquickjs"
path = "src/main.rs"

[dependencies]
"wasm-rquickjs" = { path = "crates/wasm-rquickjs", version = "0.0.0" }

camino = { workspace = true }
clap = { version = "4.5.39", features = ["default", "derive"] }

[dev-dependencies]
anyhow = { workspace = true }
test-r = { workspace = true }
tokio = { workspace = true, features = ["full"] }
wasmtime = { workspace = true, features = ["component-model"] }

[[test]]
name = "compilation"
harness = false

[[test]]
name = "dts"
harness = false

[workspace]
exclude = [
    "crates/wasm-rquickjs/skeleton",
    "tmp"
]
members = ["crates/wasm-rquickjs"]

[workspace.package]
version = "0.0.0"
edition = "2024"

license = "Apache-2.0"
homepage = "https://github.com/golemcloud/wasm-rquickjs"
repository = "https://github.com/golemcloud/wasm-rquickjs"
description = "Tool for wrapping JavaScript modules as WebAssembly components using the QuickJS engine"

[workspace.dependencies]
anyhow = "1.0.98"
camino = "1.1.10"
fs_extra = "1.3.0"
heck = "0.5.0"
include_dir = "0.7.4"
prettier-please = "0.3.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"
test-r = "2.2.0"
tokio = "1.46.1"
toml_edit = "0.22.27"
wasmtime = "34.0.1"
wit-bindgen-core = "0.43.0"
wit-parser = "0.235.0"