[package]
name = "wasi-logging"
version = "0.0.1"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Packages wasi:logging as a simple Rust crate"

[dependencies]
wit-bindgen-rt = { version = "0.42.1" }

[package.metadata.component.target.dependencies]
"wasi:logging" = { path = "wit/deps/logging" }
