[package]
name = "wasm-rquickjs"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
fs_extra = { workspace = true }
heck = { workspace = true }
include_dir = { workspace = true }
prettier-please = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
toml_edit = { workspace = true }
wit-bindgen-core = { workspace = true }
wit-parser = { workspace = true }