[package]
name = "rquickjs-component"
version = "0.0.1"
edition = "2024"

[workspace]

[profile.release]
opt-level = "s"
lto = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rquickjs = { version = "0.9.0", default-features = false, features = ["futures", "bindgen", "loader", "macro"] }
tokio = { version = "1.43.0", features = ["rt", "sync", "time"] }
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }