[package]
name = "rquickjs-component"
version = "0.0.1"
edition = "2024"

[workspace]

[profile.release]
opt-level = "s"
lto = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["logging"]
logging = ["dep:log", "dep:wasi-logger"]

[dependencies]
# Core dependencies
rquickjs = { version = "0.9.0", default-features = false, features = ["futures", "bindgen", "loader", "macro"] }
tokio = { version = "1.43.0", features = ["macros", "rt", "sync", "time"] }
tokio-util = { version = "0.7.15", default-features = false }
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }

# Logging
log = { version = "0.4.22", default-features = false, optional = true }
wasi-logger = { version = "0.1.2", default-features = false, optional = true }

[package.metadata.component.bindings]
ownership = "owning"